tests/paczka1/small_fuzzy/71079255.err
Error in line 5: XV1In3J A327 19,8
Error in line 11: XV1In3J S539 64,8
